@@ -2,6 +2,8 @@ nx-libs (2:3.5.0.8-0) UNRELEASED; urgency=low
 
   * Reorganize patch names, to reflect patch inclusion into lite+full or
     full-only ,,NX (redistributed)'' tarball.
+  * Update patch: 001_add-main-makefile.full+lite.patch, only build, install,
+    clean etc. NX subprojects if the folder exists.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 16 Jan 2012 22:28:13 +0100
 
